<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="24dp"
    android:textDirection="rtl"
    tools:context=".activities.admin.AdminDashboardActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_admin_dashboard"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/users" />

    <Button
        android:id="@+id/button_walker_profiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/walker_profiles" />

    <Button
        android:id="@+id/button_walk_requests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/walk_requests" />

    <Button
        android:id="@+id/button_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reviews" />

    <Button
        android:id="@+id/button_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistics" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/logout" />
</LinearLayout>
