<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ds_background"
    android:fillViewport="true"
    android:layoutDirection="rtl"
    tools:context=".activities.walker.WalkerDashboardActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:textDirection="rtl">

        <TextView
            style="@style/TextAppearance.DoggySitter.ScreenTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_walker_dashboard"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/button_available_walk_requests"
            style="@style/Widget.DoggySitter.Button.Dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/available_walk_requests" />

        <Button
            android:id="@+id/button_my_jobs"
            style="@style/Widget.DoggySitter.Button.Dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/my_jobs" />

        <Button
            android:id="@+id/button_my_profile"
            style="@style/Widget.DoggySitter.Button.Dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/my_profile" />

        <Button
            android:id="@+id/button_logout"
            style="@style/Widget.DoggySitter.Button.Dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/logout" />
    </LinearLayout>
</ScrollView>
